# dgl-lifesci

./: .gitignore  CONTRIBUTORS.md  Jenkinsfile  README.md  eval_report_1105.txt  eval_report_1106.txt  eval_report_1118.txt  hp_search_test.txt  hyper_run.sh  model2007_r2_1127.npz  model_r2_1105_03.npz  pyproject.toml  setup.py  yuhang_env.txt
conda/dgllife/: build.sh  meta.yaml
docker/: Dockerfile.ci_cpu  Dockerfile.ci_gpu  README.md
docker/install/: ubuntu_install_build.sh  ubuntu_install_conda.sh  ubuntu_install_core.sh
docs/: Makefile
docs/source/: cli.rst  conf.py  index.rst
examples/: README.md
examples/binding_affinity_prediction/: README.md  configure.py  main.py  utils.py
examples/link_prediction/: README.md
examples/molecule_embeddings/: README.md  drugbank_smiles.txt  id.txt  main.py  smiles.txt
examples/property_prediction/: README.md  configure.py  regression.py  utils.py
python/: setup.py  update_version.py
python/dgllife/: __init__.py  libinfo.py
python/mydgllife/: __init__.py  libinfo.py
test_jtvae/: test.py  utils.py
tests/data/: test_csv_dataset.py  test_datasets.py  test_new_dataset.py
tests/lint/: pylintrc
tests/model/: test_binding_affinity.py  test_generative_models.py  test_gnn.py  test_link_prediction.py  test_pretrain.py  test_property_prediction.py  test_reaction_prediction.py  test_readout.py
yuhang/: dgl_notebook.ipynb  pdb_playground.ipynb  pdbbind_copy.py  potentialnetmodel.py
yuhang_logs/: eval_report_1105_2.txt  eval_report_1105_3.txt  model2007_r2_1127.npz  model_r2_1117_random.npz
(+430 files in other folders)
